cleaned up colors, added theme colors to show in demo

--- a/source/default/_patterns/00-protons/non-printing/_colors.scss
+++ b/source/default/_patterns/00-protons/non-printing/_colors.scss
@@ -2,26 +2,20 @@
 
 // Greyscale
 $c-white: #fff;
-$c-off--white: #f0f0f0;
-$c-gray-light: #f7f7f7;
-$c-gray-A: #e5e5e5;
-$c-gray--B: #e4e4e4;
-$c-gray--C: #e8e8e8;
-$c-gray--D: #ddd;
-$c-gray--E: #d0d0d0;
-$c-gray-F: #ccc;
-$c-gray-G: #aaa;
-$c-gray-H: #979797;
-$c-gray--I: #888;
-$c-gray-J: #878787;
-$c-gray--K: #777;
-$c-gray--medium: #666;
-$c-storm: #555;
-$c-steel: #444;
-$c-asphalt: #3c3c3c;
+$c-background: #f0f0f0;
+$c-icon: #e5e5e5;
+$c-gray: #d0d0d0;
+$c-border: #e5e5e5;
+//$c-gray-F: #ccc;
+//$c-gray-G: #aaa;
+//$c-gray-H: #979797;
+$c-button: #878787;
+//$c-gray--K: #777;
+//$c-gray--smoke: #666;
+//$c-storm: #555;
+//$c-steel: #444;
+//$c-asphalt: #3c3c3c;
 
 
-$c-orange--light: #fd887a;
+$c-tangerine: #fd887a;
 $c-orange: #ed786a;
-
-
