--- a/source/default/_patterns/00-protons/non-printing/_bootstrap-overrides.scss
+++ b/source/default/_patterns/00-protons/non-printing/_bootstrap-overrides.scss
@@ -3,7 +3,13 @@
 
 // Colors
 $theme-colors: (
-  'light orange': $c-orange--light,
+  'white':  $c-white,
+  'background': $c-background,
+  'icon': $c-icon,
+  'gray': $c-gray,
+  'border': $c-border,
+  'button': $c-button,
+  'tangerine': $c-tangerine,
   'orange': $c-orange,
 );
 
