--- a/source/default/_patterns/01-atoms/image/_image.twig
+++ b/source/default/_patterns/01-atoms/image/_image.twig
@@ -1,7 +1,7 @@
 {# if we're in pattern lab and there's no specific `img`, let's do a placeholder image #}
 {% if BUILD_TARGET == 'pl' and not img %}
   {# default image style is `medium` #}
-  {% set imageStyleName = imageStyleName|default('medium') %}
+  {% set imageStyleName = imageStyleName|default('card') %}
 
   {# `imageStyles` defined in `_data/imageStyles.yaml` #}
   {% set imageStyle = imageStyles[imageStyleName] %}
