--- a/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.scss
+++ b/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.scss
@@ -5,4 +5,27 @@
 //   webpack.particle.js: sass-loader.data|includePaths
 
 .featured-article-card {
+  &__wrapper {
+    max-width: 310px;
+    @include media-breakpoint-up(sm) {
+      max-width: 320px;
+    }
+    @include media-breakpoint-up(lg) {
+      max-width: 350px;
+    }
+  }
+  &__image-wrapper {
+    margin-bottom: 61px;
+    img {
+      border: 6px solid $c-border;
+    }
+  }
+
+  &__text-wrapper {
+    text-align: center;
+  }
+
+  h3 {
+    @include h3();
+  }
 }
