refactored to follow BEM best pratices

--- a/source/default/_patterns/00-protons/non-printing/_colors.scss
+++ b/source/default/_patterns/00-protons/non-printing/_colors.scss
@@ -20,7 +20,7 @@ $c-button: #878787;
 $c-tangerine: #fd887a;
 $c-orange: #ed786a;
 
-//TODO: Rip out bootstrap
+//TODO: Rip out bootstrap colors?
 // Colors
 $strong-colors: (
   'white':  $c-white,
