--- a/source/default/_patterns/00-protons/non-printing/_type.scss
+++ b/source/default/_patterns/00-protons/non-printing/_type.scss
@@ -10,39 +10,66 @@ $fw--600: 600; // semi-bold/demi-bold
 $fw--700: 700; // bold
 
 //Font Sizes
-$fs--m: 16px;
-$fs--l: 26px;
+$fs--s: 16px;
+$fs--m: 20px;
+$fs--l: 33px;
 
 //Letter Spacing
 $letter-spacing--sm: 2px;
 $letter-spacing: 4px;
 
 
+//Spacing
+$spacing--xxs: 2px;
+$spacing--xs: 4px;
+$spacing--sm: 10px;
+$spacing--md: 25px;
+$spacing--lg: 33px;
+$spacing--xl: 40px;
+
+
+
 //heading mixins
 
-@mixin section_heading() {
+@mixin heading() {
   font-family: $ff--sourcesans;
   color: $c-button;
   text-transform: uppercase;
+}
+
+
+@mixin section_heading() {
+  @include heading();
   font-size: $fs--l;
   letter-spacing: $letter-spacing;
   font-weight: $fw--400;
-  margin: 0 0 24px 0;
+  margin: 100px 0 50px 0;
 }
 
-@mixin h3() {
-  font-family: $ff--sourcesans;
-  color: $c-button;
-  text-transform: uppercase;
+@mixin article_heading() {
+  @include heading();
   font-size: $fs--m;
   font-weight: $fw--600;
   letter-spacing: $letter-spacing--sm;
-  margin: 0 0 20px 0;
-  //margin: 0 0  $spacers(4) 0;
+  margin: 50px 0 25px 0;
 }
 
 // Border Mixins
 @mixin picture-border() {
   border: 6px solid $c-border;
   max-width: 100%;
+}
+
+//Button styles
+@mixin paper-btn {
+  margin: $spacing--md 0 $spacing--xl 0;
+  color: $c-white;
+  border-radius: $spacing--xs;
+  font-size: $fs--s;
+  letter-spacing: $letter-spacing--sm;
+  font-weight: $fw--600;
+  line-height: $spacing--lg;
+  padding: $spacing--sm $spacing--xl;
+  box-shadow: rgba(0, 0, 0, 0.125) $spacing--xxs $spacing--xs 0 0;
+
 }
