refactored colors to use more conventional names

--- a/apps/pl/scss/_scss2json.scss
+++ b/apps/pl/scss/_scss2json.scss
@@ -35,8 +35,8 @@ $svgicons: map-keys($sprites);
 @include export-data(
   'scssVariables.json',
   (
-    //scssColors: $theme-colors,
-    scssColors: $strong-colors,
+    scssColors: $theme-colors,
+    //scssColors: $strong-colors,
     scssBreakpoints: $grid-breakpoints,
     scssSpacing: $spacing-demo,
     fontFamilies: $font-families-demo,
