--- a/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.twig
+++ b/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.twig
@@ -28,8 +28,7 @@
 
   <div class="row text-center">
     <div class="col">
-      <button type="button" class="featured-article-grid__btn btn btn-orange ">
-        <i class="fas fa-space-shuttle"></i>
+      <button type="button" class="featured-article-grid__btn btn btn-primary">
         <i class="fas fa-file" aria-hidden="true"></i>
         {{ featured_article_grid.button_text | upper }}
       </button>
