--- a/source/default/_patterns/03-organisms/header/_header.twig
+++ b/source/default/_patterns/03-organisms/header/_header.twig
@@ -25,17 +25,26 @@
 
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <h1 class="header__title">
-        {{ header.title }}
-      </h1>
 
+  <div class="header__text-wrapper">
+
+    <div class="row">
+      <div class="col text-center">
+        <h1 class="header__title">
+          {{ header.title }}
+        </h1>
+
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="header__eyebrow col">
-      {{ header.eyebrow }}
+    <div class="row">
+      <div class="header__eyebrow col text-center">
+        {{ header.eyebrow }}
+      </div>
     </div>
+
+
   </div>
+
+
+
 </div>
