fixed bug on navbar buttons color caused by color refactor

--- a/source/default/_patterns/03-organisms/header/_header.twig
+++ b/source/default/_patterns/03-organisms/header/_header.twig
@@ -14,7 +14,7 @@
     <div class="header__navbar col text-center">
       {% for nav in header.navbar %}
         <span class="header__btn-wrapper">
-          <button type="button" class="header__btn btn btn-button">
+          <button type="button" class="header__btn btn btn-dark">
           <i class="header__svg fas fa-{{ nav.icon }}" aria-hidden="true"></i>
         </button>
        <span class="header__btn-text">
