--- a/source/default/_patterns/00-protons/non-printing/_type.scss
+++ b/source/default/_patterns/00-protons/non-printing/_type.scss
@@ -20,7 +20,7 @@ $letter-spacing: 4px;
 $letter-spacing--xl: 13px;
 
 //Spacing
-$spacing--xxs: 2px;
+//$spacing--xxs: 2px;
 $spacing--xs: 4px;
 $spacing--sm: 10px;
 $spacing--md: 25px;
@@ -59,7 +59,7 @@ $spacing-xxxl: 60px;
   font-weight: $fw--700;
   line-height: $spacing--lg;
   letter-spacing: $letter-spacing--xl;
-  text-shadow: rgba(0, 0, 0, .1) $spacing--xxs $spacing--xs;
+  text-shadow: rgba(0, 0, 0, .1) ($spacing--xs/2) $spacing--xs;
 }
 
 // Border Mixins
@@ -69,7 +69,7 @@ $spacing-xxxl: 60px;
 }
 
 @mixin button-box-shadow() {
-  box-shadow: rgba(0, 0, 0, 0.125) $spacing--xxs $spacing--xs 0 0;
+  box-shadow: rgba(0, 0, 0, 0.125) ($spacing--xs/2) $spacing--xs 0 0;
 }
 
 //Button styles
