--- a/source/default/_patterns/03-organisms/main-article/_main-article.twig
+++ b/source/default/_patterns/03-organisms/main-article/_main-article.twig
@@ -18,7 +18,7 @@
           {{ main_article.headline }}
         </div>
         <div class="main-article__header--subline">
-            {{ main_article.subline }}
+          {{ main_article.subline }}
         </div>
       </h2>
     </div>
@@ -35,27 +35,18 @@
   </div>
 
 
-
-
   {#TODO: refactor into compontent with loop#}
 
-  <div class="main-article__text-wrapper text-center">
+  <div class="main-article__text-wrapper">
     <h3 class="main-article__title">{{ main_article.title }}</h3>
     <p class="main-article__summary">{{ main_article.summary }}</p>
   </div>
 
 
 
-  {#TODO: refactor into own button compontent #}
-  <div class="row text-center">
-    <div class="col">
-      <button type="button" class="main-article__btn btn btn-primary">
-        <i class="fas fa-file" aria-hidden="true"></i>
-        {{ main_article.button_text | upper }}
-      </button>
-    </div>
-  </div>
-
+  {% include '@atoms/_icon-button.twig' with {
+    icon_button: main_article.button
+  } %}
 
 </div> <!-- /.main-article -->
 
