working on footer compontent

--- a/source/default/_patterns/02-molecules/banner/_banner.scss
+++ b/source/default/_patterns/02-molecules/banner/_banner.scss
@@ -1,3 +1,9 @@
+// Custom styles for banner
+
 // The non-printing variables, functions, and mixins of 00-protons/variables
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
+
+.banner-image--bg  {
+  //background: url('./banner-image--bg')
+}
