--- a/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.twig
+++ b/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.twig
@@ -25,6 +25,7 @@
     {% endfor %}
   </div>
 
+  {#todo: replace with button compontent #}
 
   <div class="row text-center">
     <div class="col">
