working on intro page

--- a/source/default/_patterns/01-atoms/icon-button/_icon-button.twig
+++ b/source/default/_patterns/01-atoms/icon-button/_icon-button.twig
@@ -10,7 +10,7 @@
 #}
 
 <div class="icon-button">
-  <div class="row text-center">
+  <div class="row">
     <div class="col">
       <button type="button" class="icon-button__btn--{{ icon_button.type }} btn btn-{{ icon_button.color }}">
         <i class="fas fa-{{ icon_button.icon }}" aria-hidden="true"></i>
