--- a/source/default/_patterns/02-molecules/banner/_banner.scss
+++ b/source/default/_patterns/02-molecules/banner/_banner.scss
@@ -4,6 +4,31 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
-.banner-image--bg  {
-  //background: url('./banner-image--bg')
+
+.banner-image--bg1  {
+  //background: url('./demo/banner.jpg') no-repeat;
+  background: url('https://placekitten.com/1920/524');
+}
+
+//TODO: REFACTOR INTO MIXIN
+.banner__header {
+  color: $c-white;
+  font-family: $ff--sourcesans;
+  line-height: 48px;
+  letter-spacing: 4px;
+  font-stretch: 100%;
+  text-transform: uppercase;
+  font-weight: 400;
+  height: 450px;
+  display: inline-block;
+  align-items: center;
+}
+
+.banner-image__icon-right, .banner-image__icon-left {
+  height: 141px;
+  width: 35px;
+}
+
+.banner-image__icon-left {
+  transform: scaleX(-1);
 }
