styled side bar cards

--- a/source/default/_patterns/00-protons/non-printing/_type.scss
+++ b/source/default/_patterns/00-protons/non-printing/_type.scss
@@ -97,3 +97,10 @@ $spacing-xxxl: 60px;
   border-radius: 100%;
   margin-right: ($spacing--sm * 1.5);
 }
+
+@mixin date-btn(){
+  @include btn-shared();
+  text-transform: uppercase;
+  letter-spacing: $letter-spacing--sm;
+  line-height: ($spacing--sm *3)
+}
