added images to current intro page

--- a/source/default/_patterns/00-protons/non-printing/_type.scss
+++ b/source/default/_patterns/00-protons/non-printing/_type.scss
@@ -55,6 +55,7 @@ $spacing-xxxl: 60px;
   font-size: $fs--m;
   font-weight: $fw--300;
   margin-bottom: 50px;
+  line-height: ($spacing--sm * 3);
 }
 
 @mixin page-title() {
