--- a/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.twig
+++ b/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.twig
@@ -18,7 +18,7 @@
         {% include '@atoms/image/_image.twig' with {
           imageStyleName: featured_article_card.imageStyleName|default('card'),
           img: featured_article_card.img,
-          class: "featured-article-card__img"
+          class: 'featured-article-card__img'
         } %}
 
       </a>
