--- a/source/default/_patterns/02-molecules/banner/_banner.twig
+++ b/source/default/_patterns/02-molecules/banner/_banner.twig
@@ -10,7 +10,7 @@
 #}
 
 
-<div class="banner banner-image--bg1 text-center d-flex align-items-center justify-content-around">
+<div class="banner text-center d-flex align-items-center justify-content-around" style="background-image: url({{ banner.img }})"> >
 
   <i class="banner-image__icon-right icon--bracket"></i>
   <div class="banner__header text-center d-inline-flex">
