added side bar compontent

--- a/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.twig
+++ b/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.twig
@@ -11,7 +11,7 @@
 
 <div class="side-bar-card container">
   <div class="row">
-    <div class="col">
+    <div class="col-sm-4">
       <button type="button" class="side-bar-card__btn btn btn-dark">
         {{ side_bar_card.date }}
       </button>
