--- a/source/default/_patterns/02-molecules/side-bar-img-card/_side-bar-img-card.twig
+++ b/source/default/_patterns/02-molecules/side-bar-img-card/_side-bar-img-card.twig
@@ -9,9 +9,9 @@
  */
 #}
 
-<div class="side-bar-img-card">
+<div class="side-bar-img-card container">
   <div class="row">
-    <div class="col">
+    <div class="col-sm-4">
       <h3 class="side-bar-img-card__title">{{ side_bar_img_card.title }}</h3>
       <div class="side-bar-img-card__image-text-wrapper">
           <a class="side-bar-img-card__image-link" href="#">
